<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_tab">

        <Button
            android:id="@+id/tab_projects"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_projects"
            android:drawablePadding="2dp"
            android:paddingTop="8dp"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:text="@string/tab_projects"/>

        <Button
            android:id="@+id/tab_files"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_files"
            android:drawablePadding="2dp"
            android:paddingTop="8dp"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:text="@string/tab_files"/>

        <Button
            android:id="@+id/tab_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_chat"
            android:drawablePadding="2dp"
            android:paddingTop="8dp"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:text="@string/tab_chat"/>

        <Button
            android:id="@+id/tab_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_gear"
            android:drawablePadding="2dp"
            android:paddingTop="8dp"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:text="@string/tab_settings"/>
    </LinearLayout>
</LinearLayout>
